--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-#production_url : http://codewu.com
+production_url : http://hustlei.tk
 #production_url : http://localhost:4000
 
 safe: false
