--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
-﻿# output html files path. For more see: http://jekyllrb.com/docs/permalinks/
+﻿# Disable custom plugins, github pages default disable，can't change
+safe: false
+# Incremental build only re-builds posts and pages that have changed,
+incremental: true
+# output html files path. For more see: http://jekyllrb.com/docs/permalinks/
 permalink: :year/:month/:title.html
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
@@ -29,10 +33,7 @@ kramdown:
 # github pages mandatory default setting, modify can't take effect
 highlighter: rouge
 
-
-
 #paginate: 5
-
 
 title : 昨夜星辰
 # tagline: 入则孝-出则悌-谨而信-泛爱众-而亲仁
@@ -52,14 +53,12 @@ production_url : http://hustlei.tk
 
 safe: false
 
-
 # 设定文章分组（group）所包含的几个项
 group_list:
   PKM
   IT
   Design
   Life
-
 
 JB :
   version : 0.3.0
@@ -116,7 +115,6 @@ JB :
   ASSET_PATH : false
 
   IMAGE_PATH : http://hustlei.qiniudn.com/
-
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
