--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ author :
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
 production_url : http://hustlei.tk
+production_url2 : http://hustlei.ml
 
 safe: false
 
