--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 markdown: kramdown
 # Maruku kramdown rdiscount Redcarpet
-root: http://hustlei.tk
+root: http://hustlei.ml
 # excerpt_separator: "####"
 # github pages hasn't coderay
 kramdown:
@@ -49,8 +49,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://hustlei.tk
-production_url2 : http://hustlei.ml
+production_url : http://hustlei.ml
 
 safe: false
 
