--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 markdown: kramdown
 # Maruku kramdown rdiscount Redcarpet
-root: http://hustlei.ml
+root: http://hustlei.github.io
 # excerpt_separator: "####"
 # github pages hasn't coderay
 kramdown:
