修改group配置为list嵌套map

--- a/_config.yml
+++ b/_config.yml
@@ -58,21 +58,12 @@ JB :
   theme : lei-metro
    # Some JB helpers refer to these paths; change them here if needed. user can use them too.
   #文章分为4大类
-  group1_name: PKM
-  group2_name: Coding
-  group3_name: Design
-  group4_name: Life
-  #每个类别在首页等位置显示名称
-  group1_disp: PKM
-  group2_disp: Coding
-  group3_disp: Design
-  group4_disp: Life
+  group_names: [{name:PKM,disp:PKM,path:/pages/pkm.html},
+                {name:Coding,disp:Coding,path:/pages/coding.html},
+                {name:Design,disp:Design,path:/pages/design.html},
+                {name:Life,disp:Life,path:/pages/life.html}]
   #
-  groups_path : /pages/groups.html
-  group1_path : /pages/group1.html
-  group2_path : /pages/group2.html
-  group3_path : /pages/group3.html
-  group4_path : /pages/group4.html
+  groups_path : /pages/pages.html
   tags_path : /pages/tags.html
   archive_path: /pages/archive.html
   search_path : /pages/search.html
