--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://hustlei.ml
+production_url : http://hustlei.github.io
 
 safe: false
 
